<resources>
    <string name="app_name">Arby Trips</string>
    <string name="welcome_to_arby_trips">Welcome to Arby Trips!</string>
    <string name="let_s_sign_in_first">Let\'s sign-in first:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="manage_trip">Add Trip</string>
    <string name="default_values">0.0</string>
    <string name="trip_name">Enter trip name</string>
    <string name="destination">Enter destination</string>
    <string name="trip_type">Trip Type</string>
    <string name="city_break">City break</string>
    <string name="sea_side">Sea side</string>
    <string name="mountains">Mountains</string>
    <string name="price_eur">Price(EUR): 0</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="rating">Rating</string>
    <string name="save">SAVE</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="select_picture">Select picture</string>
    <string name="no_camera">No camera detected</string>
    <string name="my_trips">My Trips</string>
    <string name="gallery_photo">Gallery Photo</string>
    <string name="camera_photo">Camera Photo</string>
    <string name="select">SELECT</string>
    <string name="take_picture">Take Picture</string>
    <string name="email_message">Hi! Would like to tell you something about your app.</string>
    <string name="chooser_title">Choose email client</string>
    <string name="trip_details">Trip details</string>
    <string name="city_trip">Trip type: City break</string>
    <string name="sea_trip">Trip type: Sea side</string>
    <string name="mountain_trip">Trip type: Mountains</string>
    <string name="let_s_plan_some_trips">Let\'s plan some trips!</string>
    <string name="select_the_button_to_start">Select the + button to start</string>
    <string name="let_s_discover_your_favourites">Let\'s discover your favourites!</string>
    <string name="check_the_heart_button_on_any_trip">Check the Heart button on any trip</string>
    <string name="signin_failed">Sign-In failed, please try again</string>
    <string name="hello_message">Hi,</string>
    <string name="all_trips">All Trips</string>
    <string name="fav_trips">Favourite Trips</string>
    <string name="trip_added">Trip added</string>
    <string name="trip_modified">Trip modified</string>
    <string name="mailto">mailto:arbysoftwork@gmail.com</string>
    <string name="trips_support">Arby Trips Support</string>
    <string name="author_name">Rares Borcea</string>
    <string name="company_name">Arby</string>
    <string name="about_me_description">I am a Computer Science student at University POLITEHNICA of
        Bucharest, interested in mobile technology and graphic design.\n\n  For any inquiries about
        my projects, don\'t hesitate to contact me through the Contact menu option.</string>
    <string name="thank_you_message">Hello and thank you for using my app!</string>
    <string name="about_me">About me</string>
    <string name="price">Price(EUR): %1$d</string>
    <string name="edit_trip">Edit trip</string>
    <string name="explain_perm_usage">This app needs camera and storage permissions for trips images.</string>
    <string name="grant_perm">Yes, grant permissions</string>
    <string name="deny_perm">No, prefer not adding images to trips</string>
    <string name="some_perm_denied"><![CDATA[Some permissions are denied. Allow all permissions at [Settings] > [Permissions]]]></string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="trip_name_warning">You need to enter a name!</string>
    <string name="enter_destination">Enter destination</string>
    <string name="delete_trip_confirmation">Delete this trip?</string>
    <string name="delete_confirmation">OK</string>
    <string name="trip_deleted">Trip deleted</string>
    <string name="error_deleting_trip">Error deleting trip</string>
    <string name="abort_delete">CANCEL</string>
    <string name="no_type">No type selected</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="no_start_date">No start date set</string>
    <string name="no_end_date">No end date set</string>
    <string name="location_image">Location_image</string>
    <string name="trip_name_title">Trip name</string>
    <string name="trip_destination_title">Trip destination</string>
    <string name="trip_type_details">Trip type:</string>
    <string name="price_eur_title">Price(EUR):</string>
    <string name="start_date_title">Start date:</string>
    <string name="end_date_title">End date:</string>
    <string name="trip_image_description">Trip Image</string>
    <string name="author_profile_picture">Author profile picture</string>
    <string name="placeholder_frame">Placeholder frame</string>
    <string name="placeholder_image">Placeholder image</string>
</resources>