<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TripDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/no_image_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/size_160dp"
                android:layout_height="@dimen/size_160dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/size_32dp"
                app:srcCompat="@drawable/circle_frame"
                android:contentDescription="@string/placeholder_frame" />

            <ImageView
                android:layout_width="@dimen/size_88dp"
                android:layout_height="@dimen/size_88dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/size_64dp"
                app:srcCompat="@drawable/placeholder"
                android:contentDescription="@string/placeholder_image" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/with_image_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/trip_image"
                android:layout_width="@dimen/size_160dp"
                android:layout_height="@dimen/size_160dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/size_32dp"
                app:srcCompat="@drawable/placeholder"
                android:contentDescription="@string/trip_image_description" />
        </FrameLayout>

        <TextView
            android:id="@+id/trip_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/size_32dp"
            android:text="@string/trip_name_title"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/trip_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/size_16dp"
            android:text="@string/trip_destination_title"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/trip_type"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_48dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/trip_type_details" />

            <TextView
                android:id="@+id/trip_price"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_48dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/price_eur_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/trip_start_date"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_32dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/start_date_title" />

            <TextView
                android:id="@+id/trip_end_date"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_32dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/end_date_title" />
        </LinearLayout>

        <RatingBar
            android:id="@+id/trip_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_48dp"
            android:isIndicator="true"
            android:numStars="5"
            android:rating="0" />

    </LinearLayout>


</ScrollView>