<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ManageTripActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputlayout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_16dp"
            android:layout_marginTop="@dimen/size_8dp"
            android:layout_marginEnd="@dimen/size_16dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/trip_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@android:drawable/ic_menu_info_details"
                android:hint="@string/trip_name"
                android:inputType="textCapSentences" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputlayout_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_16dp"
            android:layout_marginTop="@dimen/size_8dp"
            android:layout_marginEnd="@dimen/size_16dp"
            android:layout_marginBottom="@dimen/size_16dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/trip_destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@android:drawable/ic_menu_mylocation"
                android:hint="@string/enter_destination"
                android:inputType="textCapSentences" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_16dp"
            android:text="@string/trip_type"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/city_break"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/city_break"
                android:textColor="@color/gray" />

            <RadioButton
                android:id="@+id/sea_side"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/sea_side"
                android:textColor="@color/gray" />

            <RadioButton
                android:id="@+id/mountains"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/mountains"
                android:textColor="@color/gray" />
        </RadioGroup>

        <TextView
            android:id="@+id/textview_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_16dp"
            android:layout_marginTop="@dimen/size_32dp"
            android:text="@string/price_eur"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/price_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_16dp"
            android:layout_marginTop="@dimen/size_4dp"
            android:layout_marginEnd="@dimen/size_16dp"
            android:max="1500"
            android:min="0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_16dp"
                    android:layout_marginTop="@dimen/size_32dp"
                    android:text="@string/start_date"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_16dp"
                    android:layout_marginTop="@dimen/size_4dp"
                    android:layout_marginEnd="@dimen/size_16dp"
                    android:text="@string/date_format"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_16dp"
                    android:layout_marginTop="@dimen/size_32dp"
                    android:text="@string/end_date"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_16dp"
                    android:layout_marginTop="@dimen/size_4dp"
                    android:layout_marginEnd="@dimen/size_16dp"
                    android:text="@string/date_format"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_16dp"
            android:layout_marginTop="@dimen/size_32dp"
            android:text="@string/rating"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_16dp"
            android:layout_marginTop="@dimen/size_4dp"
            android:layout_marginBottom="@dimen/size_16dp"
            android:numStars="5"
            android:rating="0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="@dimen/size_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/size_16dp"
                        android:text="@string/gallery_photo"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_select_picture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/size_16dp"
                        android:layout_marginTop="@dimen/size_16dp"
                        android:layout_marginEnd="@dimen/size_16dp"
                        android:text="@string/select"
                        android:textColor="@android:color/darker_gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/size_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/size_16dp"
                        android:text="@string/take_picture"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_take_picture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/size_16dp"
                        android:layout_marginTop="@dimen/size_16dp"
                        android:layout_marginEnd="@dimen/size_16dp"
                        android:text="@string/select"
                        android:textColor="@android:color/darker_gray" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageview_destination"
                    android:layout_width="@dimen/size_0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/size_16dp"
                    android:layout_marginEnd="@dimen/size_16dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/trip_image_description"
                    android:scaleType="centerCrop"
                    android:src="@drawable/placeholder" />

                <ProgressBar
                    android:id="@+id/progress_circular"
                    android:layout_width="@dimen/size_0dp"
                    android:layout_height="@dimen/size_72dp"
                    android:layout_marginStart="@dimen/size_16dp"
                    android:layout_marginTop="@dimen/size_16dp"
                    android:layout_marginEnd="@dimen/size_16dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_16dp"
            android:layout_marginTop="@dimen/size_40dp"
            android:layout_marginEnd="@dimen/size_16dp"
            android:layout_marginBottom="@dimen/size_32dp"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />
    </LinearLayout>

</ScrollView>